# calculator-BE

./: README.md  pyproject.toml  requirements.txt  setup.py
CalculatorApp/: app.py  controllers.py
UnitTest/: local_script.py
