[build-system]
requires = ["setuptools>=50.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
setup-requires = ["setuptools_scm"]

[tool.setuptools.metadata]
name = "CalculatorApp"
version = "0.1.0"
description = "Calculator App quant code"
author = "Your Name <sughanrichardson196@gmail.com>"
license = "MIT"
