[build-system]
requires = ["setuptools>=50.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
setup-requires = ["setuptools_scm"]

[tool.setuptools.metadata]
name = "CalculatorApp"
version = "0.1.0"
description = "Calculator code"
author = "sughanrichardson1996@gmail.com"
license = "MIT"
